 * Non-HTML format of mod_status now lists number of ok/renew/error/ready MDomains.

v1.99.12
----------------------------------------------------------------------------------------------------
 * Status lists private key specification, if different from default RSA(2048).
 * Status shows list of MDs sorted alphabetically.
 * Status now shows message from a failed renewal with information and error code on where/why
   it failed.
 * At startup, an initial ACME parameter check is performed. More details are given when
   ACME challenge methods are unavailable as to the cause. server-status list these per MD.
 * Adding challenge type 'tls-alpn-01' to ACMEv1 as well.
 * server-status columns compressed. Expiry/Valid timestamp given as dates only for better
   readability. Full time as tooltip.
 * Renewal jobs properties are persisted after each run. This preserves status and schedules
   when switching child processes by mod_watchdog. It also allows server-status to provide
   more information about ongoing activities.
 * Cleanup of post config work to make the dry-run phase faster and avoid double loadings
   of MD data from the file system.
 * Splitting out certificate driving in separate source. Logging errors/warnings about
   MDomains that can not be renewed once at post config.

v1.99.11
----------------------------------------------------------------------------------------------------
 * Rework of MD's contribution to httpd 'server-status' page. Better formatting, reordering, using
   absolute GMT timestamps.

v1.99.10
----------------------------------------------------------------------------------------------------
 * MD status now initialized fully in global list. Fixes new status handler to assess
   things even when running in non-privileged setup where access to file system is no
   longer allowed.

v1.99.9
----------------------------------------------------------------------------------------------------