@@ -14,14 +14,14 @@ curl_bin = @CURL_BIN@
 openssl_bin = @OPENSSL_BIN@
 
 [acmev1]
-url_default=@ACME_DEF_URL@
+url_default=@ACME_DEFv1_URL@
 url = @BOULDER_URL@
 tos = @BOULDER_TOS@
 tos2 = @BOULDER_TOS@/invalid
 boulder_dir = @BOULDER_DIR@ 
 
 [acmev2]
-url_default=@ACME_DEFv2_URL@
+url_default=@ACME_DEF_URL@
 url = @BOULDERv2_URL@
 tos = @BOULDER_TOS@
 tos2 = @BOULDER_TOS@/invalid
