@@ -13,7 +13,7 @@ from test_base import TestEnv
 
 def setup_module(module):
     print("setup_module: %s" % module.__name__)
-    TestEnv.init()
+    TestEnv.initv1()
         
     
 def teardown_module(module):
